app/assets/stylesheets/components/_dropdown.scss
$dropdown-width: 182px;

.c-dropdown {
  position: relative;
  display: inline-flex;
  justify-content: flex-end;
  align-items: center;
  padding: 0 $button-x-padding;
  height: 100%;

  > span {
    display: inline-block;
    line-height: 52px;
  }

  .dropdown-value {
    display: flex;
    align-items: center;

    border-bottom: $body-bg-color 1px solid;
    margin: 0 0 0 ($button-x-padding / 2);
    font-weight: $base-font-weight;
    cursor: pointer;
  }

  .dropdown-content {
    background-color: $body-bg-color;
    display: none;
    position: absolute;
    box-shadow: $box-shadow;
    width: $dropdown-width;
    padding: ($button-y-padding / 2) 0;

    //TODO: Set this by JS
    top: 52px;
    right: 0;

    .dropdown-item {
      padding: ($button-y-padding / 2) $button-x-padding;
      width: 100%;
      text-align: left;
      cursor: pointer;

      & a {
        display: block;
        color: $app-bg-color;
        font-weight: $bold-font-weight
      }
    }

    &.-open {
      display: block;
    }
  }

  .arrows {
    display: flex;
    flex-flow: column;
    align-items: center;
    justify-content: center;
    margin-left: $inline-space;
    cursor: pointer;

    .c-icon {
      fill: white;

      &.-active {
        opacity: .5;
      }
    }
  }
}

